made animalValidator  by SOLID principles